--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 db_host:localhost
 db_port:3306
-db_name:sql6132622
-db_username:sql6132622
-db_password:FQrD6Elfxq
-base_url="https://approvals.fwd.wf
+db_name:bootstrap
+db_username:root
+db_password:
+base_url=
