--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,4 +3,4 @@ db_port:3306
 db_name:approvaldb
 db_username:root
 db_password:
-base_url="https://5649ca12.ngrok.io/"
+base_url=https://5649ca12.ngrok.io/
