--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>co.flock.www</groupId>
             <artifactId>flockapiSDK</artifactId>
-            <version>1.0.0.5</version>
+            <version>1.0.0.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
